# rust-game-tutorial

./: .gitignore  README.md
.github/workflows/: rust.yml
game/: Cargo.toml
game/examples/: move_tank.rs  move_tank_turret.rs  render_tank.rs
game/src/: lib.rs  main.rs  objects.rs  state.rs
game/src/objects/: bullet.rs  mod.rs
test_ggez/: Cargo.toml  README.md
test_ggez/src/: lib.rs  screenshot.rs
