[package]
name = "test_ggez"
version = "0.1.0"
edition = "2018"
description = "Screenshot testing for GGEZ Rust games"
readme = "README.md"
keywords = ["screenshot", "test"]
categories = ["development-tools::testing", "games", "testing"]
license = "Apache-2.0"
repository = "https://github.com/naomijub/rust-game-tutorial/tree/main/test_ggez"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
image = "0.23.14"
scrap = "0.5.0"
png = "0.16.8"